ags (3.18.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsGSequencerApplication
	* implemented ags_app_action_util.[ch]
	* implemented ags_primary_menu.ui
	* implemented ags_add_menu.ui
	* implemented ags_edit_menu.ui
	* refactored AgsWindow to use GtkHeaderBar
	* refactored ags_menu_action_callbacks.c
	* moved ags/X to ags/app

ags (3.17.7)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved AgsFFPlayer use GtkSpinner
	* improved AgsPitchSampler use GtkSpinner

ags (3.17.6)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved gobject introspection automake build
	* improved chapter 1 of user's handbook, added missing instruments
	* fixed chapter 3 title of user's handbook

ags (3.17.5)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed AgsSyncsynth loop start and end upper value
	* fixed AgsFMSyncsynth loop start and end upper value
	* improved CoreAudio set buffer size and samplerate

ags (3.17.4)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed AgsFFPlayer missing preset load
	* updated user's handbook

ags (3.17.3)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved AgsOscillator length depending on samplerate config
	* improved AgsFMOscillator length depending on samplerate config

ags (3.17.2)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* minor improvements
	* added ags-fx-sf2-synth unit tests
	* added ags-fx-sfz-synth unit tests

ags (3.17.1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed gtk-doc

ags (3.17.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsSFZSynth
	* implemented ags-fx-sfz-synth
	* implemented AgsSFZInstrumentLoader worker
	* implemented AgsApplySFZInstrument task
	* implemented ags_sfz_synth_util_load_instrument()
	* implemented additional getter/setter functions of AgsSFZFile, AgsSFZGroup, AgsSFZRegion and AgsSFZSample

ags (3.16.14)