@@ -1038,6 +1038,7 @@ libgsequencer_sources = files(
   'app/ags_machine_util.c',
   'app/ags_menu_action_callbacks.c',
   'app/ags_menu_bar.c',
+  'app/ags_meta_data_window.c',
   'app/ags_midi_dialog.c',
   'app/ags_midi_dialog_callbacks.c',
   'app/ags_midi_preferences.c',
