@@ -8,6 +8,7 @@ ags (3.18.0)
 	* implemented ags_edit_menu.ui
 	* refactored AgsWindow to use GtkHeaderBar
 	* refactored ags_menu_action_callbacks.c
+	* merged dev-maksymow-meta-data-window
 	* moved ags/X to ags/app
 
 ags (3.17.7)
